--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   </head>
 
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span> About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -44,19 +61,17 @@
               You're going to fall in love with nature
             </h3>
             <p class="paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              voluptatibus quod et maiores velit modi dolor iure odit vel
-              quidem. Et neque autem maiores a. Consequatur soluta vitae fugit
-              magni.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus quod
+              et maiores velit modi dolor iure odit vel quidem. Et neque autem maiores a.
+              Consequatur soluta vitae fugit magni.
             </p>
             <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventures like you never have before
             </h3>
             <p class="paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              voluptatibus quod et maiores velit modi dolor iure odit vel
-              quidem. Et neque autem maiores a. Consequatur soluta vitae fugit
-              magni.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus quod
+              et maiores velit modi dolor iure odit vel quidem. Et neque autem maiores a.
+              Consequatur soluta vitae fugit magni.
             </p>
 
             <a href="#" class="btn-text"> Learn more &rarr;</a>
@@ -90,9 +105,8 @@
               <i class="feature-box__icon icon-basic-world"></i>
               <h3 class="heading-tertiary">Explore the world</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                maiores necessitatibus odio alias laborum consequuntur sit
-                ducimus, facilis id ea.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat maiores
+                necessitatibus odio alias laborum consequuntur sit ducimus, facilis id ea.
               </p>
             </div>
           </div>
@@ -101,9 +115,8 @@
               <i class="feature-box__icon icon-basic-compass"></i>
               <h3 class="heading-tertiary">Meet nature</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                maiores necessitatibus odio alias laborum consequuntur sit
-                ducimus, facilis id ea.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat maiores
+                necessitatibus odio alias laborum consequuntur sit ducimus, facilis id ea.
               </p>
             </div>
           </div>
@@ -112,9 +125,8 @@
               <i class="feature-box__icon icon-basic-map"></i>
               <h3 class="heading-tertiary">FInd Your Way</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                maiores necessitatibus odio alias laborum consequuntur sit
-                ducimus, facilis id ea.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat maiores
+                necessitatibus odio alias laborum consequuntur sit ducimus, facilis id ea.
               </p>
             </div>
           </div>
@@ -123,9 +135,8 @@
               <i class="feature-box__icon icon-basic-heart"></i>
               <h3 class="heading-tertiary">Leave a healthier life</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                maiores necessitatibus odio alias laborum consequuntur sit
-                ducimus, facilis id ea.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat maiores
+                necessitatibus odio alias laborum consequuntur sit ducimus, facilis id ea.
               </p>
             </div>
           </div>
@@ -267,11 +278,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img
-                src="img/nat-8.jpg"
-                alt="Person on a tour"
-                class="story__image"
-              />
+              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image" />
               <figcaption class="story__caption">
                 Mary Smith
               </figcaption>
@@ -281,13 +288,11 @@
                 I had the best week ever with my family
               </h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-                autem, quidem harum ut esse exercitationem officiis at hic
-                eveniet. Necessitatibus quo quia hic delectus! Dignissimos,
-                eligendi labore? At quaerat obcaecati non delectus, inventore
-                vel amet illum cum velit, dignissimos consequuntur asperiores
-                culpa quos ea, exercitationem necessitatibus ex. Voluptatem lore
-                mollitia omnis dolor
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam autem, quidem harum
+                ut esse exercitationem officiis at hic eveniet. Necessitatibus quo quia hic
+                delectus! Dignissimos, eligendi labore? At quaerat obcaecati non delectus, inventore
+                vel amet illum cum velit, dignissimos consequuntur asperiores culpa quos ea,
+                exercitationem necessitatibus ex. Voluptatem lore mollitia omnis dolor
               </p>
             </div>
           </div>
@@ -296,11 +301,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img
-                src="img/nat-9.jpg"
-                alt="Person on a tour"
-                class="story__image"
-              />
+              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image" />
               <figcaption class="story__caption">
                 Jack Wilson
               </figcaption>
@@ -310,13 +311,11 @@
                 WOW! My life is completely different now
               </h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-                autem, quidem harum ut esse exercitationem officiis at hic
-                eveniet. Necessitatibus quo quia hic delectus! Dignissimos,
-                eligendi labore? At quaerat obcaecati non delectus, inventore
-                vel amet illum cum velit, dignissimos consequuntur asperiores
-                culpa quos ea, exercitationem necessitatibus ex. Voluptatem lore
-                mollitia omnis dolor
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam autem, quidem harum
+                ut esse exercitationem officiis at hic eveniet. Necessitatibus quo quia hic
+                delectus! Dignissimos, eligendi labore? At quaerat obcaecati non delectus, inventore
+                vel amet illum cum velit, dignissimos consequuntur asperiores culpa quos ea,
+                exercitationem necessitatibus ex. Voluptatem lore mollitia omnis dolor
               </p>
             </div>
           </div>
@@ -345,6 +344,8 @@
                     required
                   />
                   <label for="name" class="form__label">Full name</label>
+                </div>
+                <div class="form__group">
                   <input
                     type="email"
                     class="form__input"
@@ -354,12 +355,61 @@
                   />
                   <label for="email" class="form__label">Email address</label>
                 </div>
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="small" name="size" />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
+                  </div>
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="large" name="size" />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
+                  </div>
+                </div>
+                <div class="form__group ">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
               </form>
             </div>
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo u-margin-bottom-big" />
+        <div class="row">
+          <div class="col-1-of-2">
+            <div class="footer__navigation">
+              <ul class="footer_list">
+                <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Privacy policity</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-1-of-2">
+            <p class="footer__copy-right">
+              Built by <a href="#" class="footer__link">Jason Wang</a> for practicing CSS.
+              <br />Copyright &copy; by Jonas Schmedtmann. Cource:
+              <a
+                href="https://www.udemy.com/advanced-css-and-sass/learn/v4/content"
+                class="footer__link"
+                >Advanced CSS and Sass</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!--
     <section class="grid-test">
       <div class="row">
